--- a/grc338/css-grid-layout/lasagnastyle.css
+++ b/grc338/css-grid-layout/lasagnastyle.css
@@ -2,10 +2,18 @@
 
 html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; } /*My edited version of the Eric Meyer’s reset tool. You may want to include this in all of your future CSS files. */
 
+div.container {
+    max-width: 60rem;
+    margin: auto;
+}
+
+
 img {
     width: 100%; /*Please leave this line.*/
     display: block;
 }
+
+
 body {
 	background-color: rgb(250, 250, 250); /* Not totally white. */
 	color: rgb(41, 38, 38);  /* Not totally black. */
@@ -18,6 +26,7 @@ body {
 
 header{
     background-color: rgb(250, 131, 21);
+
   }
 
 section{
@@ -35,19 +44,19 @@ figcaption{
   }
 
 
-
-
 h1 {
     
 	background-color: rgb(250, 132, 21);
     color: rgb(253, 251, 247); /* Same as body background. */
 	font-size: 2rem;
 	font-weight: 700;
-    padding: 1rem, 1rem, 1rem; /* You want three values. */
+    padding: 3rem 2rem 1rem; /* You want three values. */
 	text-transform:capitalize;
     font-family: Sutro, serif;
     font-style: normal;
     line-height: 100%;
+
+  
 
    
 }
@@ -55,7 +64,7 @@ h1 {
 h2 {
 	background-color: rgb(250, 131, 21);
 	color: rgb(249,221,191);
-    padding: 1rem;
+    padding: 1rem 2rem;
 	font-size: 1.5rem;
 	font-family: sutro, serif;
 	font-weight:400;
@@ -63,9 +72,9 @@ h2 {
 }
 
 h3 {
-	margin: 1.5rem 2rem 1.5rem; /*Three values again.
+	margin: 0rem 0rem 1.5rem; /*Three values again.
      You got the idea.*/
-	padding-top: 0.5rem;
+	padding: 2rem 1rem 0rem 0rem;
 	font-size: 1.20rem;
 	color: rgb(250,132,21);
 	font-weight: 300;
@@ -73,11 +82,12 @@ h3 {
     font-style: normal;
 	text-transform: uppercase;
 	letter-spacing: 0.1em; /*Just an extra tracking for bold uppercase letters. Try 0.1em */
+    border-top: 2px solid rgb(250, 131, 21);
 }
 
 
 ul {
-    margin: 1rem 1rem 3rem 1rem;
+    margin: 0rem 1rem 3rem 1rem;
     font-family: poppins, sans-serif;  
     font-weight: 400; 
     font-style: normal; 
@@ -86,19 +96,20 @@ ul {
 
 
 li { 
-	margin: 1rem 1rem;
-   
+	margin: 1rem;
+
 }
 
 ol {
-    margin: 1rem 1rem 3rem 1rem;
+    margin: 1rem;
     font-family: poppins, sans-serif;  
     font-weight: 400; 
     font-style: normal; 
+
 }
 
 li{
-    margin: 1rem 1rem;
+    margin: 1rem 0rem;
 
 }
 
@@ -110,4 +121,53 @@ footer{
     font-style: normal;
     padding: 1rem;
   }
+
+
+
+
+  div.container {
+    max-width: 60rem;
+    margin: auto;
+}
+
+header {
+    
+    grid-column: 1/3;
+}
+
+figure {
+
+    display:grid;
+    grid-template-columns: 80% 20%;
+  
+}
+
+.ingredients {
+
+    margin-top: 3rem;
+    margin-left: 0rem;
+    grid-column: 1/2;
+    margin-right: 0rem;
+
+}
+
+
+.directions {
+
+    margin: 3rem 2rem;
+    margin-right: 0rem;
+    margin-bottom: 3rem;
+    grid-column: 2/3;
+}
+
+main {
+
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column: 1/2;
+    column-gap: 1rem;
+}
+
+
+  
 /*By the way, when we use the slash-asterisk combo, it’s a comment on the CSS and it’s meant for human beings. The machine knows it is not supposed to process anything until it finds a asterisk-slash combo that ends the comment on the CSS. */
