--- a/grc338/website-responsive/11style.css
+++ b/grc338/website-responsive/11style.css
@@ -181,7 +181,7 @@ p.addy {
 
 .footer 
 {
-  color: black;
+  color: rgb(55, 103, 113);
   font-weight: 600;
   font-style: normal;
   padding-top: 2rem, 1rem, 2rem;
