--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -1,14 +1,25 @@
 /*CSS document*/
 
 body {
-
+ 
+ 
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 3,2;
+  }
 
 div.container {
     max-width: 40em;
     margin: auto;
     padding: 1em;
+    background-color: #fafafa;
+     
+}
+
+header { 
+
 }
 
 figure {
@@ -29,9 +40,12 @@ p { font-family: sans-serif;
     font-weight: 400;
 }
 
+h1{
+     width: 8em;
+}
 h1,h2,h3 { font-family: sans-serif;
     text-transform: uppercase;
-    color:#6fa365 ;
+    color:#6a874a ;
     font-size: 1 rem;
 }
 
@@ -59,3 +73,61 @@ ul li a {
 ul li a:hover{
         color: rgb(230, 154, 12);
     }
+
+@media screen and (min-width: 60em){
+
+main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-gap: 0 1em;
+    }
+
+ div.container{
+    max-width: 80em;
+    display: grid;
+    grid-template-columns: 3fr 1fr; 
+    grid-gap: 0 1em;
+ }
+
+section.main{
+    grid-column: 2/4;
+    grid-row: 1/3;
+    display:flex;
+    flex-direction: column;
+
+}
+section.main a {
+    flex: 1 0 10em;
+    display:flex;
+    flex-direction: column;
+}
+
+section.main a figure {
+    flex: 1 0 10em;
+   
+}
+section.main a img {
+    height: 95%;
+    object-fit: cover;
+}
+
+section.main a h3 {
+    flex: 0 0 auto;
+    margin: 0;
+}
+
+section.main a p{
+    flex: 0 0 auto;
+}
+ header{ 
+    grid-column: 1/3;
+    
+ }
+
+ section{
+    max-width: 40em;
+    margin: 0 auto;
+ }
+    }
+
+
