--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -119,6 +119,7 @@ section.main a h3 {
 section.main a p{
     flex: 0 0 auto;
 }
+
  header{ 
     grid-column: 1/3;
     
@@ -128,6 +129,98 @@ section.main a p{
     max-width: 40em;
     margin: 0 auto;
  }
-    }
+    
+
+ /* beginning of gallery section */
+
+ div.gallery_container {
+    max-width: 50em;
+    margin: auto;
+}
 
 
+div.gallery_container main {
+    position: relative;
+    padding-bottom: calc(90% + 3rem);
+    overflow: hidden;
+    
+}
+
+figure.gallery {
+    opacity: 0;
+    position: hidden;
+    width: calc(100%-2rem);
+    transition: opacity 0.5s;
+}
+
+figcaption.gallery {
+    padding: 6em;
+}
+
+input {
+    display: none;
+}
+
+input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
+input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
+/* input:nth-of-type(3):checked ~ main figure:nth-of-type(3),*/
+input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
+input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
+input:nth-of-type(6):checked ~ main figure:nth-of-type(6),
+input:nth-of-type(7):checked ~ main figure:nth-of-type(7),
+input:nth-of-type(8):checked ~ main figure:nth-of-type(8){
+    opacity: 1;
+}
+
+nav.gallery_nav {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: .3em;
+    margin: 3em 0;
+}
+
+/* beginning of Newsletter section */
+form {
+    grid-column: 1/2;
+    margin: 0;
+}
+
+section.personal_info ul li input {
+    margin: 1rem 0;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+section.personal_info ul {
+    padding: 0em;
+}
+
+form ul li {
+    padding: 0em;
+}
+
+
+section.personal_info ul li label {
+    color: #13500c;    
+    font-size: .85em;
+}
+
+[type="text"]
+section ul li input[type="email"],
+section ul li input[type="name"],
+section ul li select {
+        flex: 4 0 28em;
+        box-sizing: border-box;   
+}
+
+input {
+    font-family: sans-serif;
+    color: #0a6319;
+}
+
+button {
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: 800;
+    color: #9b9d9b;
+}
