--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -95,13 +95,13 @@ section.main{
     grid-column: 2/4;
     grid-row: 1/3;
     display:flex;
-    flex-direction: column;
+    flex-direction:column;
 
 }
 section.main a {
     flex: 1 0 10em;
     display:flex;
-    flex-direction: column;
+    flex-direction:column;
 }
 
 section.main a figure {
@@ -135,48 +135,42 @@ section.main a p{
 
  /* beginning of gallery section */
 
- div.gallery {
+ div.photocontainer {
     max-width: 60em;
     margin: auto;
-    padding: 1em;
+
 }
 
-
-div.gallery_container main {
-    position: relative;
-    padding-bottom: calc(90% + 3rem);
-    overflow: hidden;
-    
-}
-
-figure.gallery {
-    margin: 0;
+figure.display {
+    margin: auto;
     opacity: 0;
     position: absolute;
-    width: calc(100%-2rem);
     transition: opacity 0.5s;
 }
-
-figcaption{
-    font-size: 1.2em;
-    font-weight: bold;
-    margin: 1em 0;
-
+main.photogallery {
+    position: relative;
+    display:block; 
+    padding-top: 2em;
+    padding-bottom: calc(42% + 4em);
+    max-width: 55%;
+    align-items: center;
+}
+.thumbnails {
+    display: grid;
+    grid-template-columns: repeat(7, 3fr);
+    grid-gap: 0.2em;
+    width: 80%;
+    align-items: center;
 }
 
-input {
+input.gallerynav {
     display: none;
 }
 
-nav.nav {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: .2em;
-}
 
 input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
 input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
-/* input:nth-of-type(3):checked ~ main figure:nth-of-type(3),*/
+input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
 input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
 input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
 input:nth-of-type(6):checked ~ main figure:nth-of-type(6),
@@ -185,7 +179,9 @@ input:nth-of-type(8):checked ~ main figure:nth-of-type(8){
     opacity: 1;
 }
 
-
+footer {
+    grid-row: 4/5;
+}
 
 }
 /* beginning of Newsletter section */
@@ -238,7 +234,7 @@ button {
 @media screen and (prefers-color-scheme: dark) {
 
 Body{ 
-    background-color: rgb(39, 45, 34);
+    background-color: rgb(14, 50, 43);
 }
 
 p{
