--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -157,7 +157,7 @@ main.photogallery {
 }
 .thumbnails {
     display: grid;
-    grid-template-columns: repeat(7, 3fr);
+    grid-template-columns: repeat(8, 3fr);
     grid-gap: 0.2em;
     width: 80%;
     align-items: center;
@@ -186,7 +186,7 @@ footer {
 }
 /* beginning of Newsletter section */
 form {
-    grid-column: 1/2;
+    grid-column: 1/3;
     margin: 0;
 }
 
@@ -206,8 +206,10 @@ form ul li {
 
 
 section.personal_info ul li label {
-    color: #13500c;    
+    color:  rgb(135, 151, 87);    
     font-size: .85em;
+    font-family: sans-serif;
+    color: rgb(45, 39, 39)
 }
 
 [type="text"]
@@ -227,7 +229,7 @@ button {
     font-family: sans-serif;
     font-size: 1rem;
     font-weight: 800;
-    color: #9b9d9b;
+    color: rgb(194, 189, 189);
 }
 
 /* Display: Darkmode */
